Fixes heading z-index.

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ main article .table .headings {
 	font-size: 1.2rem;
 	position: sticky;
 	top: 0;
+	z-index: 2;
 }
 
 main article .table .row .holder {
